--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,14 @@
 name: squad
-channels:
-  - pytorch
-  - conda-forge
-  - defaults
 dependencies:
-  - python=3.6.8
+  - python
   - ujson
   - numpy
   - pip
-  - spacy=2.0.16
+  - spacy
   - tensorboard
   - tensorflow
   - tensorboardX
   - tqdm
   - urllib3
   - pip:
-    - torch==1.7.1
+    - torch
